# spotify-search

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  PLANNING.md  README.md  SETUP_SUMMARY.md  WEB_PLANNING.md  pyproject.toml  requirements-dev.txt  requirements.txt  spotify-search.bat
.devcontainer/: devcontainer.json  post-create.sh
.github/: FUNDING.yml  README.md  pull_request_template.md  settings.json
.github/agents/: python-expert.agent.md
.github/instructions/: python.instructions.md
.github/workflows/: ci.yml  pylint.yml
macos_install/: README.md  install_from_github.sh  setup_macos.sh  spotify-search
scripts/: generate_env_docs.py  pre_commit_check_clean.py  pre_commit_pytest.py
src/: __init__.py  cli.py  config.py  database.py  main.py  spotify_client.py
src/tools/: README.md  get_playlist_json.py  get_playlists_list_json.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_misc.py  test_cli_sync.py  test_config.py  test_database.py  test_smoke.py  test_spotify_client.py  test_sync_diff.py
