[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-search"
version = "1.0.0"
description = "A Python CLI application to download, store, and search your Spotify library locally"
readme = "README.md"
requires-python = ">=3.14,<3.15"
license = {text = "MIT"}
authors = [
    {name = "Balagii"}
]
dependencies = [
    "spotipy==2.25.2",
    "click==8.3.1",
    "tinydb==4.8.2",
    "python-dotenv==1.2.1",
]

[project.optional-dependencies]
dev = [
    "black==25.12.0",
    "flake8==7.3.0",
    "isort==7.0.0",
    "mypy==1.19.1",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
]

[project.scripts]
spotify-search = "src.cli:cli"

[tool.black]
line-length = 88
target-version = ['py314']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_strict_optional = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E704"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    ".eggs",
    "*.egg",
    "build",
    "dist",
    ".tox",
    ".mypy_cache",
    ".pytest_cache",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = [
    "tests",
]
pythonpath = [
    "."
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
